--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,8 @@ jobs:
     name: Deploy to GitHub Pages
     runs-on: ubuntu-latest
     permissions:
-      id-token: write 
+      id-token: write
+      contents: write
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v3
