--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,3 +1,15 @@
+andy:
+  name: Shenyang(Andy) Huang
+  title: PhD Student
+  url: https://www.cs.mcgill.ca/~shuang43/
+  image_url: /cdlab-docs/img/students/andy.jpg
+
+kellin:
+  name: Kellin Pelrine
+  title: PhD Student
+  url: https://github.com/kellinpelrine/
+  image_url: /cdlab-docs/img/students/kellin.jpg
+
 endi:
   name: Endilie Yacop Sucipto
   title: Maintainer of Docusaurus
