--- a/docs/authors.yml
+++ b/docs/authors.yml
@@ -2,7 +2,7 @@ andy:
   name: Shenyang(Andy) Huang
   title: PhD Student
   url: https://www.cs.mcgill.ca/~shuang43/
-  image_url: ./imgs/students/andy.jpg
+  image_url: /cdlab-docs/img/students/andy.jpg
   
 endi:
   name: Endilie Yacop Sucipto
