formatted the blog post

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -10,20 +10,27 @@ kellin:
   url: https://github.com/kellinpelrine/
   image_url: /img/students/kellin.jpg
 
-endi:
-  name: Endilie Yacop Sucipto
-  title: Maintainer of Docusaurus
-  url: https://github.com/endiliey
-  image_url: https://github.com/endiliey.png
+farimah:
+  name: Farimah Poursafaei
+  title: PostDoc 
+  url: https://scholar.google.ca/citations?user=gZ7HEsMAAAAJ&hl=en
+  image_url: /img/students/farimah.jpg
 
-yangshun:
-  name: Yangshun Tay
-  title: Front End Engineer @ Facebook
-  url: https://github.com/yangshun
-  image_url: https://github.com/yangshun.png
 
-slorber:
-  name: Sébastien Lorber
-  title: Docusaurus maintainer
-  url: https://sebastienlorber.com
-  image_url: https://github.com/slorber.png
+# endi:
+#   name: Endilie Yacop Sucipto
+#   title: Maintainer of Docusaurus
+#   url: https://github.com/endiliey
+#   image_url: https://github.com/endiliey.png
+
+# yangshun:
+#   name: Yangshun Tay
+#   title: Front End Engineer @ Facebook
+#   url: https://github.com/yangshun
+#   image_url: https://github.com/yangshun.png
+
+# slorber:
+#   name: Sébastien Lorber
+#   title: Docusaurus maintainer
+#   url: https://sebastienlorber.com
+#   image_url: https://github.com/slorber.png
